change homepage in package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://mrchenliang.github.io/portfolio",
+  "homepage": "http://chenliang.ca",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
