--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "env-cmd": "^10.1.0",
     "font-awesome": "^4.7.0",
     "react": "^16.13.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.13.1",
     "react-particles-js": "^3.2.1",
     "react-router-dom": "^5.2.0",
