--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "react-particles-js": "^3.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-tsparticles": "^2.1.4",
     "react-typical": "^0.1.3",
     "react-typist": "^2.0.5",
-    "tsparticles": "^1.37.5"
+    "tsparticles": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
