--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-tsparticles": "^2.1.4",
     "react-typical": "^0.1.3",
-    "react-typist": "^2.0.5",
-    "tsparticles": "^2.1.4"
+    "react-typist": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,11 +45,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@babel/preset-env": "^7.24.6",
-    "@babel/preset-react": "^7.24.6",
-    "babel-loader": "8.1.0",
     "gh-pages": "^2.2.0"
   }
 }
